Fixed spacing issue with button

--- a/client/src/components/Jobs/JobsStatus/JobsStatus.module.scss
+++ b/client/src/components/Jobs/JobsStatus/JobsStatus.module.scss
@@ -17,5 +17,6 @@ $font-weight: 500;
   border: 1px solid #afafaf;
   font-weight: $font-weight;
   color: #707070;
-  position: relative;
+  position: absolute;
+  margin-top: -2px;
 }
